# hermes-system-doctor

./: .gitignore  IMPLEMENTATION_BRIEF.md  MANIFEST.in  Makefile  NOTICE.md  PRODUCT_PLAN.md  QUALITY_LOOP.md  README.md  RELEASE_NOTES.md  SECURITY.md  STEP_2B_LOGS_AUTH_SURFACE.md  STEP_2C_MEMORY_SKILLS.md  STEP_2_CORE_CHECKS.md  pyproject.toml
.github/workflows/: ci.yml  repository-quality.yml
docs/: hermes-system-doctor-ru.md
src/hermes_system_doctor/: checks.py  cli.py  fix_executor.py  models.py  path_utils.py  redaction.py  repair_plan.py  reporting.py
src/hermes_system_doctor/checks/: __init__.py  auth_surface.py  config.py  cron.py  discovery.py  gateway.py  logs.py  mcp.py  memory.py  plugins.py  post_update.py  profiles.py  skills.py
tests/: test_cli.py  test_fix_executor.py  test_gateway_post_update.py  test_logs_auth_surface.py  test_memory_skills.py  test_plugins_mcp.py  test_read_only.py  test_redaction.py  test_repair_plan.py
tests/fixtures/hermes_home_auth_surface/: .env  auth.json  config.yaml
tests/fixtures/hermes_home_auth_surface/logs/: token.json
tests/fixtures/hermes_home_broken_config/: config.yaml
tests/fixtures/hermes_home_multi_profile/profiles/research/: config.yaml
tests/fixtures/hermes_home_with_cron_issue/cron/: jobs.json
tests/fixtures/hermes_home_with_memory_pressure/: USER.md  memory.json
tests/fixtures/hermes_home_with_skills_issues/skills/a/dup-a/: SKILL.md
tests/fixtures/hermes_home_with_skills_issues/skills/b/dup-b/: SKILL.md
tests/fixtures/hermes_home_with_skills_issues/skills/invalid/: SKILL.md
tests/fixtures/hermes_home_with_skills_issues/skills/missing-link/: SKILL.md
tests/fixtures/hermes_home_with_skills_issues/skills/missing-link/scripts/: run.sh
tests/fixtures/hermes_home_with_skills_issues/skills/no-frontmatter/: SKILL.md
tests/fixtures/hermes_home_with_skills_issues/skills/symlink-linked/: SKILL.md
tests/fixtures/hermes_home_with_skills_ok/skills/dev/good-skill/: SKILL.md
tests/fixtures/hermes_home_with_skills_ok/skills/dev/good-skill/references/: guide.md
