[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-system-doctor"
version = "0.1.0"
description = "Read-only system diagnostics for Hermes Agent installations."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Aleksei Ulianov / Sprut_AI"}]
keywords = ["hermes-agent", "diagnostics", "profiles", "cron", "mcp", "agent-ops"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "build>=1.2"]

[project.scripts]
hermes-system-doctor = "hermes_system_doctor.cli:main"
hsd = "hermes_system_doctor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
